# ws-binance-subscribe

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
.github/workflows/: build.yml
binance_live_ingestor/: __init__.py  __main__.py
